--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
+title: Zihao He's github page
+description: my projects on github
+show_downloads: true
+google_analytics:
 theme: jekyll-theme-architect
